--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Organismos de Protección - Misiones, Argentina</title>
+    <title>Organismos de Protección</title>
     <style>
         * {
             margin: 0;
@@ -369,7 +369,7 @@
     <div class="container">
         <div class="header">
             <h1>Organismos de Protección</h1>
-            <p>Provincia de Misiones, Argentina - Conforme a la Legislación Vigente</p>
+            <p>Directorio de Información de Contacto</p>
         </div>
         
         <div class="main-content">
