--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <div class="app">
     <header class="header">
-      <div><h2>Organismos de Protección</h2></div>
+      <div><h3>Organismos de Protección-Directorio de Contacto</h3></div>
       <div>
         <button class="btn" onclick="openModal('add')">Nuevo</button>
         <button class="btn ghost" onclick="printList()">Imprimir</button>
