--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Organismos de Protección — Directorio</title>
   <style>
-    body {font-family: sans-serif; margin:0; padding:0; background:#f4f4f4;}
+    body {font-family: sans-serif; margin:0; padding:0; background: #a3c8ff;}
     .app{max-width:1100px;margin:auto;background:#fff;border-radius:10px;padding:10px;}
     .header{display:flex;justify-content:space-between;align-items:center;padding:10px;background:#2c3e50;color:#fff;}
     .btn{padding:6px 12px;border:none;border-radius:4px;cursor:pointer;background:#667eea;color:#fff;}
